# emojiGenLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
emojiGenLib/: CMakeLists.txt  emojigenlib.cpp  emojigenlib.hpp
opencv_test/: a.out  main.cpp
