cmake_minimum_required(VERSION 2.8)
add_subdirectory(emojiGenLib)
add_executable(Main main.cpp)
target_link_libraries(Main emojiGenLib)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
  include_directories(${OpenCV_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
  target_link_libraries(Main ${OpenCV_LIBS} ${PYTHON_LIBRARIES})
endif(OpenCV_FOUND)
